--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ node_modules
 ###########################
 .vscode/
 app/supervisord.pid
+
+###########################
+# envファイル
+###########################
+*.env
