--- a/app/api/alembic.ini
+++ b/app/api/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql+pymysql://root:root1234@127.0.0.1:63306/excellent_app_dev?charset=utf8mb4
+sqlalchemy.url = driver://user:pass@localhost/dbname
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
