ref #38 開発コンテナのディレクトリ名をdevに変更

--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -17,7 +17,7 @@ RUN groupadd -g $host_gid app && \
     useradd -u $host_uid -o -m -g $host_gid -s /bin/bash app && \
     echo "app ALL=(ALL:ALL) NOPASSWD: ALL" > /etc/sudoers.d/app
 
-COPY docker/app/.private_bashrc /home/app/.private_bashrc
+COPY docker/dev/.private_bashrc /home/app/.private_bashrc
 RUN echo "source ~/.private_bashrc" >> /home/app/.bashrc
 
 # supervisorインストール
@@ -31,9 +31,9 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt
 
 # supervisorの設定ファイルとエントリーポイント
-COPY docker/app/supervisor /etc/supervisor
-COPY docker/app/entrypoint-api.sh /entrypoint-api.sh
-COPY docker/app/entrypoint-front.sh /entrypoint-front.sh
+COPY docker/dev/supervisor /etc/supervisor
+COPY docker/dev/entrypoint-api.sh /entrypoint-api.sh
+COPY docker/dev/entrypoint-front.sh /entrypoint-front.sh
 RUN chmod +x /entrypoint-*.sh
 
 # importの起点となるパスを環境変数として定義
