ref #38 開発環境にnginxを導入

--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -38,3 +38,5 @@ RUN chmod +x /entrypoint-*.sh
 
 # importの起点となるパスを環境変数として定義
 ENV PYTHONPATH=/opt/app
+
+CMD ["/usr/local/bin/supervisord","--configuration=/etc/supervisor/supervisord.conf"]
