--- a/docker/front-dev/Dockerfile
+++ b/docker/front-dev/Dockerfile
@@ -1,19 +1,7 @@
-FROM python:3.11-slim-bullseye
-
-RUN apt update && \
-    apt install -y locales curl default-mysql-client less vim net-tools iputils-ping sudo
-
-# ロケール設定
-RUN echo 'ja_JP.UTF-8 UTF-8' >> /etc/locale.gen && \
-    locale-gen && \
-    update-locale LANG=ja_JP.UTF-8
-RUN ln -sf /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
-
-# install nodejs
-RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && apt-get install -y nodejs
+FROM node:20-bookworm-slim
 
 # アプリのソースコード
-COPY app /opt/app
+COPY app/front /opt/app/front
 
 COPY docker/front-dev/entrypoint-front-dev.sh /entrypoint-front-dev.sh
 RUN chmod +x /entrypoint*.sh
