--- a/docker/shell/Dockerfile
+++ b/docker/shell/Dockerfile
@@ -4,13 +4,18 @@ ARG host_uid
 ARG host_gid
 
 RUN apt update && \
-    apt install -y locales curl default-mysql-client less vim net-tools iputils-ping sudo
+    apt install -y locales curl unzip default-mysql-client less vim net-tools iputils-ping sudo jq
 
 # ロケール設定
 RUN echo 'ja_JP.UTF-8 UTF-8' >> /etc/locale.gen && \
     locale-gen && \
     update-locale LANG=ja_JP.UTF-8
 RUN ln -sf /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
+
+# aws cli インストール
+RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
+    unzip awscliv2.zip && \
+    ./aws/install
 
 # ユーザー作成
 RUN groupadd -g $host_gid app && \
